--- a/taller1_titanic.ipynb
+++ b/taller1_titanic.ipynb
@@ -70,6 +70,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "lined-candle",
+   "metadata": {},
+   "source": [
+    "<table align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/TAA-fing/TAA-2021/blob/main/taller1_titanic.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Ejecutar en Google Colab</a>\n",
+    "  </td>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "expensive-jewel",
    "metadata": {},
    "source": [
@@ -284,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weighted-frame",
+   "id": "worse-clarity",
    "metadata": {},
    "source": [
     "Dado que cuenta con un primer modelo entrenado está en condiciones de subir sus predicciones a la plataforma Kaggle. Si desea hacerlo [aquí](https://www.kaggle.com/alexisbcook/titanic-tutorial) encontrará un ejemplo. De todas formas, lo alentamos a trabajar en la siguiente parte para generar un mejor modelo. "
