--- a/taller1_titanic.ipynb
+++ b/taller1_titanic.ipynb
@@ -93,33 +93,47 @@
    "id": "committed-quarterly",
    "metadata": {},
    "source": [
-    "En caso de estar trabajando desde un notebook en Colab, la siguiente celda realiza la configuración necesaria para obtener datos desde la plataforma Kaggle."
+    "En caso de estar trabajando desde un notebook en Colab, deberá:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "considered-dispatch",
+   "metadata": {},
+   "source": [
+    "a) Installar el paquete *kaggle* para acceder a los datos "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "sunrise-major",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ahead-austria",
+   "metadata": {},
+   "source": [
+    "b) realizar la configuración necesaria para obtener datos desde la plataforma Kaggle. Para ello deberá ir a la página de la competencia y en la sección *data* aceptar los términos. Luego ejecutar la siguiente celda y pasarle el *token* de su usuario (ver comentario en celda)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "mediterranean-sullivan",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'google.colab'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2fb99448d479>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# El siguiente archivo solicitado es para habilitar la API de Kaggle en el entorno que está trabajando.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google.colab'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from google.colab import files\n",
     "\n",
-    "# El siguiente archivo solicitado es para habilitar la API de Kaggle en el entorno que está trabajando.\n",
+    "# El archivo solicitado es para habilitar la API de Kaggle en el entorno que está trabajando.\n",
     "# Este archivo se descarga entrando a su perfíl de Kaggle, en la sección API, presionando donde dice: Create New API Token\n",
     "\n",
     "uploaded = files.upload()\n",
@@ -142,21 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "chicken-token",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/guillermo/.kaggle/kaggle.json'\n",
-      "Downloading titanic.zip to /home/guillermo/gitlab/taller-de-aprendizaje-automatico/talleres/Taller1\n",
-      "  0%|                                               | 0.00/34.1k [00:00<?, ?B/s]\n",
-      "100%|██████████████████████████████████████| 34.1k/34.1k [00:00<00:00, 1.94MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kaggle competitions download -c titanic"
    ]
