--- a/taller2_criticas_cine.ipynb
+++ b/taller2_criticas_cine.ipynb
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupied-tragedy",
+   "id": "monetary-honolulu",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -500,7 +500,7 @@
    "id": "fancy-dividend",
    "metadata": {},
    "source": [
-    "Construir un **pipeline** que tome como entrada los datos luego de realizar una limpieza básica de los mismos, genere el modelo *bag-of-words* y realice una clasificación de los mismos utilizando el clasificador de *regresión logística*. "
+    "Construir un **pipeline** que tome como entrada los datos luego de realizar una limpieza básica de los mismos, genere el modelo *bag-of-words* y realice una clasificación de los mismos utilizando el clasificador de *regresión logística*.  Evalúe su desempeño utilizando diferentes métricas, por ejemplo: *precision*, *recall*, *accuracy*. "
    ]
   },
   {
