--- a/taller3_demanda_de_bicicletas.ipynb
+++ b/taller3_demanda_de_bicicletas.ipynb
@@ -41,7 +41,7 @@
         "\n",
         "En esta actividad se trabajará sobre el *dataset* de la competencia [*Bike Sharing Demand*](https://www.kaggle.com/c/bike-sharing-demand) de *Kaggle*. El objetivo de la competencia, predecir la demanda de bicicletas a partir de la combinación de datos históricos sobre demanda y clima. \n",
         "\n",
-        "El conjunto corresponde a datos de alquiler por hora y abarcan dos años de información. El subconjunto de *train* está compuesto por los primeros 19 días de cada mes, mientras que el subconjunto de *test* va desde el día 20 hasta el final del mes. Este último debe ser utilizado solamente en la parte 10 para subir los resultados a la página de la competencia.\n",
+        "El conjunto corresponde a datos de alquiler por hora y abarcan dos años de información. El subconjunto de *train* está compuesto por los primeros 19 días de cada mes, mientras que el subconjunto de *test* va desde 20 hasta el final del mes. Este último debe ser utilizado solamente en la parte 10 para subir los resultados a la página de la competencia.\n",
         "\n",
         "En esta actividad nos centraremos en el algoritmo **Decision Trees**, el cual al igual que *SVM* es un algoritmo versatil que se utiliza en problemas tanto de clasificación como de regresión. También trabajaremos con algoritmos basados en métodos de ensamble de estimadores, como son **Random Forest** y **Gradient Boosting**, que utilizan como estimador base **Decision Trees**.\n"
       ]
@@ -57,7 +57,7 @@
         "\n",
         "*   Conocer los estimadores *Decision Trees*, entender cómo funcionan para un problema de regresión, ver ventajas y desventajas.\n",
         "*   Familiarizarse con los métodos de ensamblado de estimadores y entender cual es el objetivo de usar estos métodos.\n",
-        "*   Incorporar funciones personalizadas de transformación de columnas y medida de desempeño.\n"
+        "*   Incorporar una función de transformación de columnas y una función de medida de desempeño personalizadas.\n"
       ]
     },
     {
@@ -520,7 +520,7 @@
       },
       "source": [
         "### Parte 5 - Ensamble\n",
-        "*   ¿Cuáles son las ventajes de los métodos de Ensamble?.\n",
+        "*   ¿Cuáles son las ventajes de los métodos de Ensamble?\n",
         "*   ¿A qué métodos de ensamble está asociado *Random Forest*?.\n",
         "*   Importar la función *RandomForestRegressor()* de *Scikit-Learn*.\n",
         "*   Indicar y describir los principales hiperparámetros correspondientes a los métodos de ensamble que ofrece la función.\n",
