--- a/taller4_deteccion_de_anomalias.ipynb
+++ b/taller4_deteccion_de_anomalias.ipynb
@@ -323,9 +323,7 @@
         "*   Implementar un detector que calcule el valor de los *scores*, y que además determine las predicciones a partir de un *threshold* calculado de manera similar al ejemplo. En la siguiente celda se proporciona un *template* para la implementación del detector.\n",
         "*   ¿Cuántos componentes está utilizando para la mezlca? ¿por qué?.\n",
         "\n",
-        "Un valor de *percen=0* debería correspnder a tomar como *threshold* el *score* del dato de entrenamiento más alejado del modelo. Si le aseguran que los datos de entrenamiento son completamente normales y sin impuresas.\n",
-        "\n",
-        "*    ¿Mantendría este punto de operación? ¿por qué? "
+        "*   Obtener diferentes predicciones para los datos del punto de operación,variando el parámetro *percen*. Discutir sobre los resultados."
       ]
     },
     {
