--- a/taller4_deteccion_de_anomalias.ipynb
+++ b/taller4_deteccion_de_anomalias.ipynb
@@ -107,9 +107,9 @@
       "source": [
         "<table align=\"left\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/TAA-fing/TAA-2021/blob/main/taller2_criticas_cine.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Ejecutar en Google Colab</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/TAA-fing/TAA-2021/blob/main/taller4_deteccion_de_anomalias.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Ejecutar en Google Colab</a>\n",
         "  </td>\n",
-        "</table>"
+        "</table>\n"
       ]
     },
     {
