--- a/taller6_Fashion-MNIST.ipynb
+++ b/taller6_Fashion-MNIST.ipynb
@@ -14,7 +14,7 @@
    "id": "expanded-friendly",
    "metadata": {},
    "source": [
-    "En esta actividad se diseñara y entrenará una arquitectura para clasificar las imágenes del dataset *Fashion MNIST*. \n",
+    "En esta actividad se diseñará y entrenará una arquitectura para clasificar las imágenes del dataset *Fashion MNIST*. \n",
     "\n",
     "## Objetivos\n",
     "\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "congressional-delivery",
+   "id": "posted-consortium",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-perry",
+   "id": "boring-edmonton",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -121,7 +121,7 @@
    "id": "curious-victorian",
    "metadata": {},
    "source": [
-    "Construya una red red neuronal totalmente conectada de 20 capas y 100 neuronas por capa. Para ello se sugiere completar la implementación de la función `fully_connected_model`. Utilice *relu* como función de activación y *sgd* como optimizador.  Indique cuántos parámetros tiene la red."
+    "Construya una red neuronal totalmente conectada de 20 capas y 100 neuronas por capa. Para ello se sugiere completar la implementación de la función `fully_connected_model`. Utilice *relu* como función de activación y *sgd* como optimizador.  Indique cuántos parámetros tiene la red."
    ]
   },
   {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "generic-taxation",
+   "id": "sharing-wheat",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verbal-parallel",
+   "id": "prostate-stupid",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -300,22 +300,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dietary-travel",
-   "metadata": {},
-   "source": [
-    "**9b)** ¿Cuántos parámetros tiene el modelo?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "irish-alloy",
    "metadata": {},
    "source": [
-    "**9c)** Entrenar una realización de la red. Por ejemplo, utilizar:\n",
+    "**9b)** Entrenar una realización de la red. Por ejemplo, utilizar:\n",
     "- N=2\n",
     "- 64 filtros de convolución de tamaño 3 en la primera capa del bloque\n",
     "- 32 filtros de convolución de tamaño 3 en la primera capa del bloque\n",
     "- 128 neuronas en la primera capa densa "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dietary-travel",
+   "metadata": {},
+   "source": [
+    "**9c)** ¿Cuántos parámetros tiene el modelo?"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "source": [
     "### Parte 10 - Entrenar la mejor arquitectura posible\n",
     "\n",
-    "En esta parte el objetivo será entrenar el mejor clasificador posible para *Fashion Mnist*. La única restricción es que el modelo de arquitectura tendrá que ser como el de la **parte 3** o como el de la **parte 9**. En ambos casos se podrán evaluar las siguientes variaciones:     \n",
+    "En esta parte el objetivo será entrenar el mejor clasificador posible para *Fashion MNIST*. La única restricción es que el modelo de arquitectura tendrá que ser como el de la **parte 3** o como el de la **parte 9**. En ambos casos se podrán evaluar las siguientes variaciones:     \n",
     "    - Número de capas y neuronas por capa en el modelo de la **parte3**     \n",
     "    - Número de bloques, cantidad de filtros de bloque y tamaño de los filtros en el caso del modelo de la **parte 9**              \n",
     "    - Distintas funciones de activación y métodos de inicialización de pesos     \n",
